backup_/output/ast/parse_errors.txt
AST Parse Errors Report
Generated: 2025-08-28T11:22:16
====================================================================================================
D:\VHP-Projects\vhp-serverless\functions_py\cr_occfcast1_2_webbl_fitria.py:222:13 SyntaxError: invalid syntax
            else:
            ^
====================================================================================================
D:\VHP-Projects\vhp-serverless\functions_py\dml_list_save_it_3bl.py:51:18 SyntaxError: invalid syntax
            UNIX SILENT VALUE ("mkdir " + "/usr1/vhp/tmpLOG/")
                 ^
====================================================================================================
D:\VHP-Projects\vhp-serverless\functions_py\gl_parxls1_2bl.py:169:116 SyntaxError: positional argument follows keyword argument
            pfrom_date = date_mdy(get_month(from_date) - timedelta(days=1, get_day(from_date) , get_year(from_date)))
                                                                                                                   ^
====================================================================================================
D:\VHP-Projects\vhp-serverless\functions_py\nt_loyaltyprog.py:1843:40 SyntaxError: invalid syntax. Perhaps you forgot a comma?
        tz = to_int(entry(1, to_string(get_current_time_in_seconds()ZONE, 'hh:mm:ss') , chr(58)))
                                       ^
====================================================================================================
D:\VHP-Projects\vhp-serverless\functions_py\po_list_btn_go2cldbl.py:3955:9 SyntaxError: invalid syntax
        elif stattype == 1 and usrname == "":
        ^
====================================================================================================
D:\VHP-Projects\vhp-serverless\functions_py\precheckin_sendemailbl.py:261:23 SyntaxError: invalid syntax
            OS_DELETE VALUE (php_path)
                      ^
====================================================================================================
